Actualizar README con secciones de interfaces y enlaces a capturas; placeholders en docs/screens